--- a/package.json
+++ b/package.json
@@ -16,20 +16,25 @@
     "@react-native-firebase/firestore": "^14.1.0",
     "@react-native-firebase/storage": "^14.1.0",
     "@react-native-google-signin/google-signin": "^7.0.1",
+    "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-action-button": "^2.8.5",
     "react-native-fbsdk-next": "^6.1.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.37.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-vector-icons": "^9.0.0",
     "styled-components": "^5.3.3"
   },
