--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-screens": "^3.9.0",
     "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-vector-icons": "^9.0.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
