--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/storage": "^14.1.0",
     "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
