--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,6 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+
+#i added this for the error failure chuchuchu
+org.gradle.jvmargs=-Xmx4608m
